# HireMind-AI

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  debug_retrieval.py  docker-compose.yml  fix_cache.py  ppt.md  pyproject.toml  render.yaml  restore_cache.py  truncate.py
.github/workflows/: ci.yml
.pytest_tmp/test_candidate_repository_excl0/: candidates.jsonl
.pytest_tmp/test_candidate_repository_load0/: candidates.jsonl
.pytest_tmp/test_cleaned_text_preserves_pr0/: jd.txt
.pytest_tmp/test_cleaning_is_applied0/: jd.txt
.pytest_tmp/test_dataset_service_writes_st0/: candidates.jsonl
.pytest_tmp/test_export_creates_features_j0/: jd_features.json
.pytest_tmp/test_export_creates_requiremen0/: jd_requirements.json
.pytest_tmp/test_load_md_file0/: jd.md
artifacts/: candidate_features.parquet  candidate_summary.pkl  domain_graph.pkl  jd_features.json  jd_graph.pkl  jd_requirements.json  knowledge_graph.pkl  ontology.pkl  ranking_model.pkl  skill_similarity_matrix.parquet
configs/: candidate_schema.json  config.yaml  domains.yaml  ontology.yaml  synonyms.yaml
feature_cache/: candidate.parquet  candidate.pkl
reports/: leaderboard_simulation.md  submission_report.md  validation_report.txt
scripts/: _bootstrap.py  build_index.py  build_knowledge_layer.py  build_retrieval_index.py  evaluate.py  generate_submission.py  package_submission.py  parse_jd.py  preprocess.py  process_candidates.py  profile_performance.py  rank.py  retrieve_and_rank.py  run_benchmarks.py  validate_submission.py
(+214 files in other folders)
