[project]
name = "hiremind-ai"
version = "0.1.0"
description = "Production Grade Explainable Candidate Intelligence Platform"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.138.1",
    "hydra-core>=1.3.3",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "loguru>=0.7.3",
    "networkx>=3.6.1",
    "numpy>=2.5.0",
    "omegaconf>=2.3.1",
    "orjson>=3.11.9",
    "pandas>=3.0.3",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "rapidfuzz>=3.14.5",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "spacy>=3.8.14",
    "tqdm>=4.68.3",
    "typer>=0.25.1",
    "uvicorn>=0.49.0",
    "xgboost>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hiremind"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
explicit_package_bases = true

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "matplotlib>=3.11.0",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "psutil>=6.0.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]
